fixed bug with overflow

--- a/src/scss/blocks/_sidebar.scss
+++ b/src/scss/blocks/_sidebar.scss
@@ -107,8 +107,6 @@
     }
   }
   &__categories-list {
-    flex: 1 0 0;
-    overflow: auto;
     margin-top: 10px;
   }
   &__add-category-form {
